resolve popup edit overflow and upload button update styles of create post

--- a/Profile-Store-Mini-Social-Media/frontend/src/components/Popup-edit/PopupEdit.css
+++ b/Profile-Store-Mini-Social-Media/frontend/src/components/Popup-edit/PopupEdit.css
@@ -3,7 +3,7 @@
 	background-color: rgba(0, 0, 0, 0.4);
 	color: white;
 	height: 100vh;
-	z-index: 100;
+	z-index: 1000;
 	position: fixed;
 	top: 0;
 	left: 0;
