--- a/Profile-Store-Mini-Social-Media/frontend/src/components/upload/Upload.css
+++ b/Profile-Store-Mini-Social-Media/frontend/src/components/upload/Upload.css
@@ -32,7 +32,7 @@
 	color: blue;
 }
 
-#upload-back-link {
+.upload-back-link {
 	color: blue;
 	text-decoration: none;
 }
