--- a/Profile-Store-Mini-Social-Media/frontend/src/containers/Navigation/Navbar.css
+++ b/Profile-Store-Mini-Social-Media/frontend/src/containers/Navigation/Navbar.css
@@ -8,5 +8,5 @@
 	padding: 15px;
 	position: sticky;
 	top: 0;
-	z-index: 1000;
+	z-index: 800;
 }
